# environmental-sensor-telemetry

./: .env  .gitignore  README.md  docker-compose.yml
EnvironmentalSensorTelemetry/: .gitignore  Dockerfile  EnvironmentalSensorTelemetry.csproj  EnvironmentalSensorTelemetry.sln  Program.cs  Setting up Data provider.md  appsettings.json
EnvironmentalSensorTelemetry/GrpcServices/: EnvironmentalSensorTelemetryService.cs
EnvironmentalSensorTelemetry/InfluxDB/: InfluxDBApiFactoryService.cs  InfluxDBService.cs
EnvironmentalSensorTelemetry/InfluxDBConfig/: dummy.txt
EnvironmentalSensorTelemetry/Interceptors/: ServerLoggerInterceptor.cs
data-explorer/data-explorer/: Dockerfile  README.md  openapi.json  pyproject.toml
data-explorer/data-explorer/data_explorer/: __init__.py  data_explorer_service.py  server.py  utils.py
data-explorer/data-explorer/data_explorer/grpc_types/: __init__.py  environmental_sensor_telemetry_service_pb2.py  environmental_sensor_telemetry_service_pb2.pyi  environmental_sensor_telemetry_service_pb2_grpc.py
data-explorer/data-explorer/data_explorer/protos/: environmental_sensor_telemetry_service.proto
data-explorer/data-explorer/data_explorer/request_types/: __init__.py  aggregate_time_span_query.py  delete_time_span_query.py  device_path.py  field_name_path.py  read_over_timespan_query.py  sensor_data.py  sensor_data_batch_body.py
data-explorer/data-explorer/data_explorer/response_types/: __init__.py  data_explorer_response.py  error_response.py
influx/: Setting up InfluxDB.md  processor.py
influx/influxdb2-config/: dummy.txt
(+10 files in other folders)
