[tool.poetry]
name = "data-explorer"
version = "0.1.0"
description = ""
authors = ["Mihajlo Madic <mihajlo.madic@elfak.rs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
grpcio = "^1.62.2"
grpcio-tools = "^1.62.2"
flask-openapi3 = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
